tests/snapshots/examples_fixtures/type_system__failing__85_hm_function_effect_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/85_hm_function_effect_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 1st argument to `apply_with_time` has the wrong type.

  --> examples/type_system/failing/85_hm_function_effect_mismatch.flx:8:21
  |
3 | fn apply_with_time(f: ((Int) -> Int with Time), x: Int) -> Int {

4 |     f(x)

5 | }

6 | 

7 | fn main() -> Unit {

8 |     apply_with_time(io_add_one, 1)
  |                     ^^^^^^^^^^
  |                     ---------- this argument is `(Int) -> Int with IO`

Help:
  Expected `(Int) -> Int with Time` as the 1st argument.
== stdout ==
<not executed>
